--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Montserrat&display=swap');
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #e2e8f0;
+}
